# finbert-stock-sentiment

./: README.md  docker-compose.yml  pyproject.toml  sentiment_results.csv
src/: check_db.py  dashboard.py  database.py  main.py
src/etl/: scraper.py
src/model/: sentiment.py
